--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   </head>
 
   <body>
-    <h1>Welcome Ninja!!</h1>
+    
+    <h1>Welco Ninja!!</h1>
     <h3>Write your code here!</h3>
     <h3>A CSS and JS file has been created and linked for you already.</h3>
     <h3>Feel free to change the directory structure to your liking.</h3>
